Fix main page error
Fixed intro not aligned.

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ a {
     display: flex;
     background-color: #1F2937;
     padding: 50px 200px;
+    justify-content: center;
 }
 
 .hero {
@@ -44,6 +45,7 @@ a {
     width: 400px;
     height: 300px;
     flex-direction: column;
+    margin-right: 20px;
 
 }
 
